--- a/xaringan-themer.css
+++ b/xaringan-themer.css
@@ -50,7 +50,7 @@
   --text-bold-color: #7b8e1f;
   --code-highlight-color: #add8e6;
   --inverse-text-color: #000000;
-  --inverse-background-color: white;
+  --inverse-background-color: #fcab01;
   --inverse-header-color: #290502;
   --inverse-link-color: darkmagenta;
   --title-slide-background-color: #7b8e1f;
@@ -58,7 +58,7 @@
   --header-background-color: #7b8e1f;
   --header-background-text-color: #FFFFFF;
   --primary: #7b8e1f;
-  --secondary: white;
+  --secondary: #fcab01;
   --white: #FFFFFF;
   --black: #000000;
 }
@@ -178,7 +178,7 @@ img, video, iframe {
   max-width: 100%;
 }
 blockquote {
-  border-left: solid 5px white80;
+  border-left: solid 5px #fcab0180;
   padding-left: 1em;
 }
 .remark-slide table {
@@ -193,7 +193,7 @@ th, td {
   padding: 5px;
 }
 .remark-slide thead, .remark-slide tfoot, .remark-slide tr:nth-child(even) {
-  background: #FFFFFF;
+  background: #FEEECC;
 }
 table.dataTable tbody {
   background-color: var(--background-color);
@@ -203,7 +203,7 @@ table.dataTable.display tbody tr.odd {
   background-color: var(--background-color);
 }
 table.dataTable.display tbody tr.even {
-  background-color: #FFFFFF;
+  background-color: #FEEECC;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.5);
